# openvino_ai_practice

./: README.md
OvTensorNpyConverter/: CMakeLists.txt  README.md  main.cpp
OvTensorNpyConverter/OvTensorNpyConverter/: npy_to_tensor.hpp  tensor_to_npy.hpp
bce_reranker/: REDME.md  bce-reranker.py
genai_lora/: CMakeLists.txt  README.md  REAMDME.md  config.h.in  main.cpp  sentences.txt  utils.h
openvoice2/: README.md  convert_model.py
openvoice2/openvino_irs/: openvoice_tone_conversion.xml
outetts/: README.md  ov_cmp_performance.py  ov_infer.py  ov_infer_quantized.py  ov_outetts_helper.py  requirements.txt  torch_infer.py  torch_lora_add_tokenizer.py  torch_lora_verification.py
ov_genai_interop/ov_genai_interop_net/: README.md  ov_genai_interop_net.sln
ov_genai_interop/ov_genai_interop_net/ov_genai_interop_net/: ChatSample.cs  Program.cs  ov_genai_interop_net.csproj
parler-tts/: README.md  parler-tts-convert-model.py  parler-tts-ov.py  parler-tts-streamer-torch.py  parler-tts-torch.py
pass_profiling/: README.md
speecht5/: README.md
